// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with defaults 1`] = `
<div
  className="scoreContainerSmall"
>
  <div
    className="snackbar"
  >
    test has joined
  </div>
  <div>
    PLAYERS: 
    2
  </div>
  <div>
    LEVEL: 
    4
  </div>
  <div>
    SCORE: 
    999
  </div>
</div>
`;

exports[`renders correctly with defaults 2`] = `
<div
  className="scoreContainer"
>
  <div
    className="snackbar"
  >
    test has joined
  </div>
  <div>
    PLAYERS: 
    2
  </div>
  <div>
    LEVEL: 
    4
  </div>
  <div>
    SCORE: 
    999
  </div>
</div>
`;
